# prism

./: .gitignore  README.md  pyproject.toml  serve.py
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: diff.md  impact.md
commands/: diff.md  prism-impact.md
docs/plans/: 2026-02-20-code-architecture-graph-design.md  2026-02-20-data-vs-control-design.md  2026-02-20-diff-and-change-planning-design.md  2026-02-20-implementation-plan.md  2026-02-20-planned-features.md  2026-02-21-additional-metrics-design.md  2026-02-21-additional-metrics-impl.md  2026-02-21-diff-and-impact-skills-design.md  2026-02-21-diff-and-impact-skills-impl.md  2026-02-21-metric-driven-blocks-design.md  2026-02-21-metric-driven-blocks-impl.md
hooks/: hooks.json
hooks/scripts/: check-callgraph.sh
src/callgraph/: cli.py  discovery.py  graph_builder.py  graph_diff.py  output.py  plan_engine.py
test-project/analytics-service/: main.py
test-project/auth-service/: main.py
test-project/billing-service/: main.py
test-project/file-service/: main.py
test-project/frontend/: package.json
test-project/gateway/: config.py  main.py  proxy.py  service_registry.py
test-project/notification-service/: main.py
test-project/workspace-service/: main.py
tests/: test_call_edges.py  test_cli_diff.py  test_cli_plan.py  test_diff_workflow.py  test_discovery.py  test_graph_builder.py  test_graph_diff.py  test_integration.py  test_output.py  test_plan_engine.py  test_python_parser.py  test_typescript_parser.py
web/: index.html
web/js/: config-panel.js  diff-overlay.js  edges.js  (+10 more)
(+106 files in other folders)
